--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "chart.js": "^4.4.4",
     "date-fns": "^3.6.0",
     "dhtmlx-scheduler": "^7.1.0",
+    "file-saver": "^2.0.5",
     "icofont": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
@@ -51,6 +52,7 @@
     "@angular/cli": "^18.1.4",
     "@angular/compiler-cli": "^18.1.4",
     "@angular/localize": "^18.1.4",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "@types/jsonwebtoken": "^9.0.6",
     "jasmine-core": "~5.1.0",
