--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "date-fns": "^3.6.0",
     "dhtmlx-scheduler": "^7.1.0",
     "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
     "icofont": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^3.1.2",
